--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -596,8 +596,9 @@ Resources:
                         Service:
                         - ec2.amazonaws.com
                       Action:
-                        - 'sts:AssumeRole'
-            ManagedPolicyArns: !Sub 'arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonEC2RoleforSSM'
+                      - 'sts:AssumeRole'
+            ManagedPolicyArns:
+                - !Sub 'arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonEC2RoleforSSM'
 
     BastionHostPolicy:
         Type: 'AWS::IAM::Policy'
