Fix attribute typo

--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -587,12 +587,12 @@ Resources:
     BastionHostRole:
         Type: 'AWS::IAM::Role'
         Properties:
-            Path: /
+            Path: "/"
             AssumeRolePolicyDocument:
                 Version: '2012-10-17'
                 Statement:
                     - Effect: Allow
-                      Principle:
+                      Principal:
                         Service:
                         - ec2.amazonaws.com
                       Action:
