--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -402,8 +402,9 @@ Resources:
                         apt-get install unzip awscli -y
                         apt-get install apache2 -y
                         systemctl start apache2.service
-                        rm /var/www/html/index.html
+                        rm /var/www/html/*
                         aws s3 cp ${s3Bucket} /var/www/html
+                        cd /var/www/html/
                         unzip -o udacity.zip
                         systemctl restart apache2.service
                     -  s3Bucket: !Ref S3BucketUrl
