Add s3:GetObject to fix 403 connection error during aws s3 cp

--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -546,7 +546,8 @@ Resources:
                 Statement:
                 - Effect: Allow
                   Action:
-                  - s3:List*
+                  - 's3:List*'
+                  - 's3:GetObject'
                   Resource: "*"
             Roles:
             - !Ref UdacityS3ReadOnlyEC2
